ASDFASDFASDo/jfkas;otilknqrt

--- a/Android/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Android/MyApplication/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
         </activity>
 
 
-
+        <service android:name=".services.SignUpService"
+            android:exported="false"/>
 
     </application>
 
