DRIVE ME CLOSER SO I CAN HIT IT WITH MY SWORD.

--- a/Android/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Android/MyApplication/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
         <service android:name=".services.SignUpService"
             android:exported="false"/>
 
+        <service android:name=".services.LoginService"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
