image for thomas and landing -> settings navigation

--- a/Android/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Android/MyApplication/app/src/main/AndroidManifest.xml
@@ -39,8 +39,14 @@
             android:name=".activities.SignUp"
             android:screenOrientation="portrait">
         </activity>
+
         <activity
             android:name=".activities.Landing"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
+            android:name=".activities.Settings"
             android:screenOrientation="portrait">
         </activity>
 
