landing -> settings -. test environment works

--- a/Android/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Android/MyApplication/app/src/main/AndroidManifest.xml
@@ -50,6 +50,11 @@
             android:screenOrientation="portrait">
         </activity>
 
+        <activity
+            android:name=".activities.TestEnvironment"
+            android:screenOrientation="portrait">
+        </activity>
+
         <service android:name=".services.SignUpService"
             android:exported="false"/>
 
