--- a/Android/MyApplication/app/build.gradle
+++ b/Android/MyApplication/app/build.gradle
@@ -19,8 +19,13 @@ android {
     }
 }
 
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.1.4'
     compile 'com.android.support:appcompat-v7:22.2.1'
 }
