--- a/Android/MyApplication/app/build.gradle
+++ b/Android/MyApplication/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.4'
     compile 'com.android.support:appcompat-v7:22.2.1'
+    compile('com.afollestad.material-dialogs:core:0.8.1.0@aar')
 }
