--- a/Android/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Android/MyApplication/app/src/main/AndroidManifest.xml
@@ -61,6 +61,9 @@
         <service android:name=".services.LoginService"
             android:exported="false"/>
 
+        <service android:name=".services.TestingDataService"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
