--- a/Android/MyApplication/app/src/main/AndroidManifest.xml
+++ b/Android/MyApplication/app/src/main/AndroidManifest.xml
@@ -64,6 +64,17 @@
         <service android:name=".services.TestingDataService"
             android:exported="false"/>
 
+        <receiver
+            android:name=".receivers.BootUpReceiver"
+            android:enabled="true"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
